# dynamic-agents

./: .gitignore  README.md  alembic.ini  basedpyrightconfig.json  pyproject.toml  pyrightconfig.json
docs/: FUTURE_ROADMAP.md  INTEGRATION_PLAN.md  PLAN.md
migrations/: README  env.py
migrations/versions/: 202402050001_initial_schema.py
src/dynamic_agents/: __init__.py  worker.py
src/dynamic_agents/api/: __init__.py  app.py  deps.py
src/dynamic_agents/api/routes/: __init__.py  agents.py  execute.py  health.py  knowledge.py  router.py  teams.py  workflows.py
src/dynamic_agents/core/: __init__.py  events.py  exceptions.py  execution.py  factory.py  knowledge.py  repository.py  serialization.py  team_factory.py  team_repository.py  tool_registry.py  ui_generator.py  workflow_factory.py  workflow_repository.py
src/dynamic_agents/mcp/: __init__.py
src/dynamic_agents/models/: __init__.py  agents.py  base.py  executions.py  router.py  teams.py  tools.py  workflows.py
src/dynamic_agents/router/: __init__.py  config.py  manager.py  schemas.py
src/dynamic_agents/schemas/: __init__.py  agents.py  base.py  events.py  executions.py  router.py  teams.py  tools.py  ui_protocol.py  workflows.py
src/dynamic_agents/secrets/: __init__.py  cache.py  config.py  exceptions.py  manager.py  mappings.py  schemas.py
src/dynamic_agents/storage/: __init__.py  database.py
src/dynamic_agents/tools/: __init__.py
tests/: __init__.py
typings/cachetools/: __init__.pyi
typings/httpx/: __init__.pyi
typings/pydantic/: __init__.pyi
typings/pydantic_settings/: __init__.pyi
typings/sqlalchemy/: __init__.pyi  types.pyi
typings/sqlalchemy/dialects/: __init__.pyi
typings/sqlalchemy/dialects/postgresql/: __init__.pyi
typings/sqlalchemy/engine/: __init__.pyi
typings/sqlalchemy/ext/: __init__.pyi
typings/sqlalchemy/ext/asyncio/: __init__.pyi
typings/sqlalchemy/orm/: __init__.pyi
typings/sqlalchemy/pool/: __init__.pyi
