[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dynamic-agents"
version = "0.1.0"
description = "Dynamic AI Agent creation, persistence and execution with Agno and LiteLLM Router"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Dynamic Agents Team" }
]
keywords = ["ai", "agents", "agno", "litellm", "dynamic", "persistence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "agno>=1.0.0",
    "litellm>=1.50.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "cachetools>=5.3.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "pgvector>=0.4.2",
    "pypdf>=6.6.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
    "pre-commit>=3.0.0",
]
all = [
    "dynamic-agents[dev]",
]

[project.scripts]
dynamic-agents = "dynamic_agents.cli:app"

[project.urls]
Homepage = "https://github.com/tavo/dynamic-agents"
Repository = "https://github.com/tavo/dynamic-agents"

[tool.hatch.build.targets.wheel]
packages = ["src/dynamic_agents"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = ["E501", "B008", "B904"]

[tool.ruff.lint.isort]
known-first-party = ["dynamic_agents"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
